# axiomrl

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  publish.yml  sonarcloud.yml
configs/a2c/: cartpole.yaml
configs/agent57/: tennis_atari.yaml
configs/apex_dqn/: tennis_event_offense.yaml  tennis_event_offense_v2.yaml  tennis_event_offense_v3.yaml  tennis_event_offense_v5_1.yaml  tennis_event_offense_v5_1_resume_sparse_ckpt.yaml
configs/appo/: cartpole.yaml
configs/ars/: pendulum.yaml
configs/awr/: pendulum.yaml
configs/bcq/: pendulum.yaml
configs/c51_dqn/: breakout_atari.yaml
configs/cql/: pendulum.yaml
configs/crr/: pendulum.yaml
configs/discrete_sac/: cartpole.yaml
configs/iqn/: cartpole.yaml
configs/po_dreamer/: breakout_atari.yaml
configs/prioritized_dqn/: cartpole.yaml
configs/qr_dqn/: breakout_atari.yaml
configs/rainbow_dqn/: tennis_event_v2.yaml  tennis_no_early_stop.yaml  tennis_stable_lr.yaml
configs/recurrent_ppo/: breakout_atari.yaml
configs/rlpd/: pendulum.yaml
configs/scalezero/: breakout_atari.yaml
configs/spr/: breakout_atari.yaml
configs/td3/: pendulum.yaml
configs/xql/: pendulum.yaml
docs/: changelog.md  compatibility.md  config-schema.md  development.md  faq.md  index.md  run-artifacts.md
docs/algorithms/: index.md  model-based.md  off-policy.md  offline.md  on-policy.md
docs/api/: experimental.md  index.md  stable-core.md
docs/cli/: index.md
docs/concepts/: architecture.md  index.md  training-workflow.md
docs/configuration/: index.md  scheduling.md  train-config.md
docs/developer/: contributing.md  index.md  project-structure.md
docs/getting-started/: index.md  installation.md  quickstart.md  requirements.md
docs/guide/: checkpointing.md  evaluation.md  index.md  offline-rl.md  pixel-observations.md  training.md  zoo-benchmarks.md
docs/plans/: 2026-03-09-a2c-td3-expansion.md  2026-03-09-eval-resume-workflows.md  2026-03-09-experiment-manager.md  2026-03-09-phase1-bootstrap-closure.md  2026-03-09-phase11-dqn-foundation.md  2026-03-09-phase12-sac-algorithm.md  2026-03-09-phase12-sac-training.md  2026-03-09-rl-package-foundation-design.md  2026-03-09-rl-package-module-contracts.md  2026-03-09-rl-package-roadmap-design.md  2026-03-09-rl-training-package.md  2026-03-09-tensorboard-logging.md  2026-03-09-trainer-runtime-shared.md  2026-03-09-training-callbacks.md  2026-03-10-c51-dqn.md  2026-03-10-ddpg.md  2026-03-10-double-dueling-dqn.md  2026-03-10-n-step-dqn.md  2026-03-10-noisy-dqn.md  2026-03-10-prioritized-dqn.md  2026-03-10-qr-dqn.md  2026-03-10-rainbow-dqn.md  2026-03-11-cql.md  2026-03-11-iql.md  2026-03-11-iqn.md  2026-03-11-redq.md  2026-03-11-td3-bc.md  2026-03-11-tqc.md  2026-03-12-atari-recurrent-ppo-phase1.md  2026-03-12-awac-online-controls-phase3.md  2026-03-12-awr-phase14.md  2026-03-12-bcq-bear-offline-wave-phase5.md  2026-03-12-bcq-bear-phase5.md  2026-03-12-calql-phase10.md  2026-03-12-crr-phase8.md  2026-03-12-data-rewards-controls-phase2.md  2026-03-12-drqv2-phase7.md  2026-03-12-edac-phase12.md  2026-03-12-her-goal-replay-design.md  2026-03-12-her-goal-replay-phase4.md  (+73 more)
docs/research/: 2026-03-09-rl-package-survey.md  2026-03-16-atari-discrete-popular-algorithms-2015-2026.md  2026-04-15-tennis-event-experiment-log.md
examples/: a2c_cartpole_reference.py  appo_cartpole_reference.py  ars_pendulum_reference.py  c51_dqn_cartpole_reference.py  cql_pendulum_reference.py  curl_pendulum_reference.py  d4pg_pendulum_reference.py  ddpg_pendulum_reference.py  decision_transformer_pendulum_reference.py  double_dqn_cartpole_reference.py  dqn_breakout_atari_reference.py  dqn_cartpole_reference.py  dreamer_cartpole_pixels_reference.py  drq_pendulum_reference.py  drqn_cartpole_reference.py  dueling_dqn_cartpole_reference.py  fqf_cartpole_reference.py  gail_cartpole_reference.py  impala_cartpole_reference.py  iql_pendulum_npz_reference.py  iql_pendulum_reference.py  iqn_cartpole_reference.py  mbpo_pendulum_reference.py  mopo_pendulum_reference.py  n_step_dqn_cartpole_reference.py  naf_pendulum_reference.py  noisy_dqn_cartpole_reference.py  openai_es_pendulum_reference.py  pets_pendulum_reference.py  ppg_cartpole_reference.py  ppo_breakout_atari_reference.py  ppo_cartpole_reference.py  prioritized_dqn_cartpole_reference.py  qr_dqn_cartpole_reference.py  r2d2_cartpole_reference.py  rainbow_dqn_cartpole_reference.py  recurrent_ppo_breakout_atari_reference.py  redq_pendulum_reference.py  sac_pendulum_reference.py  td3_bc_pendulum_reference.py  (+2 more)
scripts/: benchmark_zoo.py  tennis_status.py  train.py
site/: 404.html  index.html  sitemap.xml
site/algorithms/: index.html
site/api/: index.html
site/changelog/: index.html
site/cli/: index.html
site/compatibility/: index.html
site/concepts/: index.html
site/config-schema/: index.html
site/configuration/: index.html
site/developer/: index.html
tests/: conftest.py  test_a2c_reference_script.py  test_a2c_trainer_smoke.py  test_a2c_update.py  test_agent57_trainer_smoke.py  test_algorithm_registry_contracts.py  test_apex_dqn_trainer_smoke.py  test_appo_reference_script.py  test_appo_trainer_smoke.py  test_appo_update.py  test_ars_reference_script.py  test_ars_trainer_smoke.py  test_ars_update.py  test_atari_dqn_trainer_smoke.py  test_atari_envs.py  test_atari_onpolicy_pixel_trainers_smoke.py  test_atari_ppo_trainer_smoke.py  test_atari_reference_scripts.py  test_awac_trainer_smoke.py  test_awac_update.py  test_awr_trainer_smoke.py  test_awr_update.py  test_bc_trainer_smoke.py  test_bc_update.py  test_bcq_trainer_smoke.py  test_bcq_update.py  test_bear_trainer_smoke.py  test_bear_update.py  test_benchmarking.py  test_c51_dqn_reference_script.py  test_c51_dqn_update.py  test_cal_ql_trainer_smoke.py  test_cal_ql_update.py  test_callbacks.py  test_checkpoint_evaluate.py  test_checkpoint_resume.py  test_checkpoint_workflows.py  test_cli.py  test_cli_config.py  test_cli_workflows.py  (+181 more)
zoo/: README.md
(+786 files in other folders)
