[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomrl"
version = "1.0.0"
description = "A stable-core reinforcement learning package with semver-governed APIs, experimental extensions, and benchmark workflows."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "deep-learning", "pytorch", "gymnasium", "atari"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium",
  "numpy",
  "PyYAML",
  "tensorboard",
  "torch",
]

[project.urls]
Homepage = "https://github.com/skygazer42/axiomrl"
Documentation = "https://github.com/skygazer42/axiomrl#readme"
Repository = "https://github.com/skygazer42/axiomrl"
Issues = "https://github.com/skygazer42/axiomrl/issues"
Changelog = "https://github.com/skygazer42/axiomrl/blob/main/CHANGELOG.md"

[project.optional-dependencies]
atari = [
  "ale-py",
]
offline = [
  "minari",
]
experimental = []
dev = [
  "build",
  "pytest",
  "pytest-cov",
  "twine",
  "opencv-python",
  "pygame",
]

[project.scripts]
axiomrl = "rl_training.cli:main"
axiomrl-zoo = "rl_training.zoo_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rl_training = [
  "assets/configs/*/*.yaml",
  "assets/zoo/*/*.yaml",
  "assets/zoo/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/rl_training"]
omit = [
  "src/rl_training/assets/*",
  "src/rl_training/examples/*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"
