[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomrl"
version = "1.0.0"
description = "A stable-core reinforcement learning package with semver-governed APIs, experimental extensions, and benchmark workflows."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "deep-learning", "pytorch", "gymnasium", "atari"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium",
  "numpy",
  "PyYAML",
  "tensorboard",
  "torch",
]

[project.urls]
Homepage = "https://github.com/skygazer42/axiomrl"
Documentation = "https://github.com/skygazer42/axiomrl#readme"
Repository = "https://github.com/skygazer42/axiomrl"
Issues = "https://github.com/skygazer42/axiomrl/issues"
Changelog = "https://github.com/skygazer42/axiomrl/blob/main/CHANGELOG.md"

[project.optional-dependencies]
atari = [
  "ale-py",
]
offline = [
  "minari",
]
tuning = [
  "optuna",
]
experimental = []
dev = [
  "build",
  "mypy",
  "optuna",
  "types-PyYAML",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "tomli; python_version < '3.11'",
  "twine",
  "opencv-python",
  "pygame",
]

[project.scripts]
axiomrl = "axiomrl.cli:main"
axiomrl-zoo = "axiomrl.zoo_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
axiomrl = [
  "assets/configs/*/*.yaml",
  "assets/zoo/*/*.yaml",
  "assets/zoo/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "unit: fast isolated tests",
  "integration: cross-module workflow tests",
  "smoke: representative runtime smoke tests",
  "slow: tests excluded from the default fast path",
]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
  ".worktrees",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "skip"
mypy_path = "src"
files = [
  "src/axiomrl/cli.py",
  "src/axiomrl/cli_config.py",
  "src/axiomrl/cli_doctor.py",
  "src/axiomrl/cli_zoo.py",
  "src/axiomrl/zoo/reporting.py",
  "src/axiomrl/zoo/reporting_render.py",
  "src/axiomrl/zoo/reporting_runs.py",
  "src/axiomrl/zoo/reporting_stats.py",
  "src/axiomrl/zoo/core.py",
  "src/axiomrl/experiment/registry_core.py",
  "src/axiomrl/experiment/registry_continuous_loaders.py",
  "src/axiomrl/experiment/registry_dqn_loaders.py",
  "src/axiomrl/experiment/registry_evaluators.py",
  "src/axiomrl/experiment/registry_offline_loaders.py",
  "src/axiomrl/experiment/registry_offline_specs.py",
  "src/axiomrl/experiment/registry_on_policy_specs.py",
  "src/axiomrl/experiment/registry_policy_loaders.py",
  "src/axiomrl/experiment/registry_predictors.py",
  "src/axiomrl/experiment/registry_recurrent_loaders.py",
  "src/axiomrl/experiment/registry_specialized_loaders.py",
  "src/axiomrl/experiment/registry_value_based_specs.py",
  "src/axiomrl/experiment/registry_world_model_specs.py",
  "src/axiomrl/experiment/registry_types.py",
  "src/axiomrl/experiment/registry_actor_critic_specs.py",
  "tests/conftest.py",
  "tests/support/checkpoint_workflows.py",
  "tests/support/markers.py",
  "tests/support/public_api.py",
  "tests/support/runtime_foundation.py",
  "tests/test_algorithm_registry_contracts.py",
  "tests/test_checkpoint_evaluate.py",
  "tests/test_checkpoint_resume.py",
  "tests/test_cli_config.py",
  "tests/test_cli_workflows.py",
  "tests/test_cli_zoo_leaderboard.py",
  "tests/test_cli_zoo_report.py",
  "tests/test_experiment_manager_workflows.py",
  "tests/test_public_api_continuous_control.py",
  "tests/test_public_api_off_policy_suite.py",
  "tests/test_public_api_policy_gradient.py",
  "tests/test_public_api_visual_control.py",
  "tests/test_registry_internal_split.py",
  "tests/test_registry_providers.py",
  "tests/test_release_contracts.py",
  "tests/test_runtime_evaluation_support_integration.py",
  "tests/test_runtime_training_session_integration.py",
  "tests/test_test_markers.py",
  "tests/test_zoo_modules.py",
  "tests/test_zoo_reporting_split.py",
]

[tool.coverage.run]
branch = true
source = ["src/axiomrl"]
omit = [
  "src/axiomrl/assets/*",
  "src/axiomrl/examples/*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"
